--- a/html_restaurants/delice.html
+++ b/html_restaurants/delice.html
@@ -13,26 +13,32 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="../assets/resto.css">
 	<script src="https://kit.fontawesome.com/352e81b49a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+	<p>délice</p>
 	<div class="main-container">
 		<header>
 			<div>
 				<i class="fa-solid fa-arrow-left"></i>
-				<img src="./Images et textes Ohmyfood/images/logo/Ohmyfood@2x.svg">
+				<img src="../assets/logo/ohmyfood@2x.svg">
 			</div>
 		</header>
 
 
 		<footer>
-			<img src="./Images et textes Ohmyfood/images/logo/Ohmyfood@2x.svg">
+			<img src="../assets/logo/ohmyfood@2x.svg">
 			<nav>
 				<ul>
-					<li><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-					<li><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
+					<li><i class="fa-solid fa-utensils"></i><a href="#">Proposer
+							un
+							restaurant</a>
+					</li>
+					<li><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir
+							partenaire</a>
+					</li>
 					<li><a href="#">Mentions légales</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
