--- a/index.html
+++ b/index.html
@@ -2,59 +2,144 @@
 <html lang="fr">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Ohmyfood</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
-		rel="stylesheet">
-	<link rel="stylesheet" href="./css/style.css">
-	<script src="https://kit.fontawesome.com/352e81b49a.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ohmyfood</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./assets/style.css">
+    <script src="https://kit.fontawesome.com/352e81b49a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-	<div class="main-container">
-		<header>
-			<img src="./Images et textes Ohmyfood/images/logo/Ohmyfood@2x.svg">
-			<div class="formulaire_de_recherche">
-				<div>
-					<i class="fa-solid fa-location-dot point"></i>
-				</div>
-				<div id="formulaire">
-					<form method="post" action="traitement.php">
-						<input type="text" name="ville, pays" id="ville,quartier" placeholder="Paris, Belleville"
-							size="20" maxlength="30">
-					</form>
-				</div>
-			</div>
-		</header>
+    <div class="main-container">
+        <header>
+            <img src="./assets/logo/ohmyfood@2x.svg">
+            <div class="formulaire_de_recherche">
+                <div>
+                    <i class="fa-solid fa-location-dot point"></i>
+                </div>
+                <div id="formulaire">
+                    <form method="post" action="traitement.php">
+                        <input type="text" name="ville, pays" id="ville,quartier" placeholder="Paris, Belleville"
+                            size="20" maxlength="30">
+                    </form>
+                </div>
+            </div>
+        </header>
 
-		<aside>
-			<h1>Réservez le menu qui vous convient</h1>
-			<p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-			<a href="restaurants"><button class="resto" type="button">Explorer nos restaurants></button></a>
-		</aside>
+        <aside>
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <a href="restaurants"><button class="resto" type="button">Explorer nos restaurants></button></a>
+        </aside>
 
+        <section>
+            <h1>Fonctionnement</h1>
+            <div>
+                <p>1</p>
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <p>Choisissez un restaurant</p>
+            </div>
+            <div>
+                <p>2</p>
+                <i class="fa-solid fa-list-ul"></i>
+                <p>Composez votre menu</p>
+            </div>
+            <div>
+                <p>3</p>
+                <i class="fa-solid fa-store"></i>
+                <p>Dégustez au restaurant</p>
+            </div>
+        </section>
 
-		<footer>
-			<img src="./Images et textes Ohmyfood/images/logo/Ohmyfood@2x.svg">
-			<nav>
-				<ul>
-					<li><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-					<li><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
-					<li><a href="#">Mentions légales</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
+        <section>
+            <h1>restaurants</h1>
+            <div>
+                <a href="html_restaurants/palette.html">
+                    <article class="card">
+                        <img src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="Photo d'une assiette">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">La palette du goût</h3>
+                                <Ménilmontant class="card-subtitle">Ménilmontant</p>
+                            </div>
+                            <div class="card-heart">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+                        </div>
+                    </article>
+                </a>
 
-			</nav>
+                <a href="html_restaurants/enchante.html">
+                    <article class="card">
+                        <img src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">La note enchantée</h3>
+                                <class class="card-subtitle">Charonne</p>
+                            </div>
+                            <div class="card-heart">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+                        </div>
+                    </article>
+                </a>
 
-		</footer>
-	</div>
+                <a href="html_restaurants/francaise.html">
+                    <article class="card">
+                        <img src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">A la française</h3>
+                                <p class="card-subtitle">Cité rouge</p>
+                            </div>
+                            <div class="card-heart">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+
+                <a href="html_restaurants/delice.html">
+                    <article class="card">
+                        <img src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="Photo d'une assiette">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">Le délice des sens</h3>
+                                <p class="card-subtitle">Folie-Méricourt</p>
+                            </div>
+                            <div class="card-heart">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+                        </div>
+                    </article>
+                </a>
+            </div>
+        </section>
+
+        <footer>
+            <img src="./assets/logo/ohmyfood@2x.svg">
+            <nav>
+                <ul>
+                    <li><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                    <li><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
+                    <li><a href="#">Mentions légales</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+
+            </nav>
+
+        </footer>
+    </div>
 </body>
 
 </html>
