--- a/html_restaurants/delice.html
+++ b/html_restaurants/delice.html
@@ -23,13 +23,13 @@
 		<header>
 			<div>
 				<i class="fa-solid fa-arrow-left"></i>
-				<img src="../assets/logo/ohmyfood@2x.svg">
+				<img src="../assets/logo/ohmyfood@2x.svg" alt="Logo">
 			</div>
 		</header>
 
 
 		<footer>
-			<img src="../assets/logo/ohmyfood@2x.svg">
+			<img src="../assets/logo/ohmyfood@2x.svg" alt="Logo">
 			<nav>
 				<ul>
 					<li><i class="fa-solid fa-utensils"></i><a href="#">Proposer
