--- a/html_restaurants/francaise.html
+++ b/html_restaurants/francaise.html
@@ -10,8 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="../assets/resto.css">
 	<script src="https://kit.fontawesome.com/352e81b49a.js" crossorigin="anonymous"></script>
@@ -23,20 +22,22 @@
 		<header>
 			<div>
 				<i class="fa-solid fa-arrow-left"></i>
-				<img src="../assets/logo/ohmyfood@2x.svg">
+				<img src="../assets/logo/ohmyfood@2x.svg" alt="Logo">
 			</div>
 		</header>
 
 
 		<footer>
-			<img src="../assets/logo/ohmyfood@2x.svg">
+			<img src="../assets/logo/ohmyfood@2x.svg" alt="Logo">
 			<nav>
 				<ul>
-					<li><i class="fa-solid fa-utensils"></i><a href="#">Proposer
+					<li><i class="fa-solid fa-utensils"></i><a
+							href="#">Proposer
 							un
 							restaurant</a>
 					</li>
-					<li><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir
+					<li><i class="fa-solid fa-handshake-angle"></i><a
+							href="#">Devenir
 							partenaire</a>
 					</li>
 					<li><a href="#">Mentions légales</a></li>
