--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="main-container">
         <header>
-            <img src="./assets/logo/ohmyfood@2x.svg">
+            <img src="./assets/logo/ohmyfood@2x.svg" alt="Logo">
             <div class="formulaire_de_recherche">
                 <div>
                     <i class="fa-solid fa-location-dot point"></i>
@@ -37,7 +37,7 @@
         <aside>
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a href="restaurants"><button class="resto" type="button">Explorer nos restaurants></button></a>
+            <button class="resto" type="button">Explorer nos restaurants</button>
         </aside>
 
         <section>
@@ -69,7 +69,7 @@
                         <div class="card-content">
                             <div class="card-txt">
                                 <h3 class="card-title">La palette du goût</h3>
-                                <Ménilmontant class="card-subtitle">Ménilmontant</p>
+                                <p class="card-subtitle">Ménilmontant</p>
                             </div>
                             <div class="card-heart">
                                 <i class="fa-regular fa-heart"></i>
@@ -84,7 +84,7 @@
                         <div class="card-content">
                             <div class="card-txt">
                                 <h3 class="card-title">La note enchantée</h3>
-                                <class class="card-subtitle">Charonne</p>
+                                <p class="card-subtitle">Charonne</p>
                             </div>
                             <div class="card-heart">
                                 <i class="fa-regular fa-heart"></i>
@@ -127,7 +127,7 @@
         </section>
 
         <footer>
-            <img src="./assets/logo/ohmyfood@2x.svg">
+            <img src="./assets/logo/ohmyfood@2x.svg" alt="Logo">
             <nav>
                 <ul>
                     <li><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
