--- a/index.html
+++ b/index.html
@@ -78,95 +78,118 @@
             </div>
             <div class="choix">
                 <p class="nbr">3</p>
-                <i class="fa-solid fa-store"></i>
+                <i class="fa-solid fa-store store"></i>
                 <p>Dégustez au restaurant</p>
             </div>
         </nav>
 
-        <section>
-            <h1>restaurants</h1>
-            <div>
+        <section class="resto">
+            <h1>Restaurants</h1>
+
+            <article class="card">
                 <a href="html_restaurants/palette.html">
-                    <article class="card">
-                        <img src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt="Photo d'une assiette">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">La palette du goût</h3>
-                                <p class="card-subtitle">Ménilmontant</p>
-                            </div>
-                            <div class="card-heart">
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-solid fa-heart"></i>
-                            </div>
+                    <img src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette">
+                    <div class="nouveau">
+                        <p>Nouveau</p>
+                    </div>
+                    <div class="card-content">
+                        <div class="card-txt">
+                            <h2 class="card-title">La palette du goût</h2>
+                            <p class="card-subtitle">Ménilmontant</p>
                         </div>
-                    </article>
+                    </div>
                 </a>
 
+                <div class="card-heart">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+            </article>
+
+
+
+            <article class="card">
                 <a href="html_restaurants/enchante.html">
-                    <article class="card">
-                        <img src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">La note enchantée</h3>
-                                <p class="card-subtitle">Charonne</p>
-                            </div>
-                            <div class="card-heart">
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-solid fa-heart"></i>
-                            </div>
+                    <img src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette">
+                    <div class="nouveau">
+                        <p>Nouveau</p>
+                    </div>
+                    <div class="card-content">
+                        <div class="card-txt">
+                            <h2 class="card-title">La note enchantée</h2>
+                            <p class="card-subtitle">Charonne</p>
                         </div>
-                    </article>
+                    </div>
                 </a>
+                <div class="card-heart">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </div>
 
-                <a href="html_restaurants/francaise.html">
-                    <article class="card">
-                        <img src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">A la française</h3>
-                                <p class="card-subtitle">Cité rouge</p>
-                            </div>
-                            <div class="card-heart">
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-solid fa-heart"></i>
-                            </div>
-                        </div>
-                    </article>
-                </a>
 
-                <a href="html_restaurants/delice.html">
-                    <article class="card">
-                        <img src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            alt="Photo d'une assiette">
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h3 class="card-title">Le délice des sens</h3>
-                                <p class="card-subtitle">Folie-Méricourt</p>
-                            </div>
-                            <div class="card-heart">
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-solid fa-heart"></i>
-                            </div>
+            </article>
+
+
+
+            <article class="card">
+                <a href="html_restaurants/enchante.html">
+                    <img src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette">
+                    <div class="card-content">
+                        <div class="card-txt">
+                            <h2 class="card-title">A la française</h2>
+                            <p class="card-subtitle">Cité rouge</p>
                         </div>
-                    </article>
+                    </div>
                 </a>
+                <div class="card-heart">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+
+
+            </article>
+
+
+
+            <article class="card">
+                <a href="html_restaurants/enchante.html">
+                    <img src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        alt="Photo d'une assiette">
+                    <div class="card-content">
+                        <div class="card-txt">
+                            <h2 class="card-title">Le délice des sens</h2>
+                            <p class="card-subtitle">Folie-Méricourt</p>
+                        </div>
+                    </div>
+                </a>
+                <div class="card-heart">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+
+
+            </article>
+
             </div>
         </section>
 
         <footer>
-            <img src="./assets/logo/ohmyfood@2x.svg" alt="Logo">
-            <nav>
+            <div class="logo__footer">
+                <img src="./assets/logo/ohmyfoodwhite.svg" alt="Logo">
+            </div>
+            <div>
                 <ul>
-                    <li><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-                    <li><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li>
-                    <li><a href="#">Mentions légales</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="modlong"><i class="fa-solid fa-utensils couvert"></i><a href="#">Proposer un
+                            restaurant</a></li>
+                    <li class="modlong"><i class="fa-solid fa-handshake-angle partenaire"></i><a href="#">Devenir
+                            partenaire</a>
+                    </li>
+                    <li class="modcourt"><a href="#">Mentions légales</a></li>
+                    <li class="modcourt"><a href="#">Contact</a></li>
                 </ul>
-
-            </nav>
-
+            </div>
         </footer>
+
     </main>
 </body>
 
