--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 <body>
     <main>
+        <!--<div class="loader">
+            <i class="fa-solid fa-spinner "></i>
+            <i class="fa-solid fa-kitchen-set"></i>
+        </div>-->
         <header>
             <div class="titre">
                 <a href="index.html"><i class="fa-solid fa-arrow-left arrow"></i></a>
@@ -99,10 +103,9 @@
                         </div>
                     </div>
                 </a>
-
                 <div class="card-heart">
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-regular fa-heart coeur"></i>
+                    <i class="fa-solid fa-heart coeur-plein"></i>
                 </div>
             </article>
 
@@ -122,11 +125,9 @@
                     </div>
                 </a>
                 <div class="card-heart">
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-regular fa-heart coeur"></i>
+                    <i class="fa-solid fa-heart coeur-plein"></i>
                 </div>
-
-
             </article>
 
 
@@ -142,14 +143,10 @@
                     </div>
                 </a>
                 <div class="card-heart">
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-regular fa-heart coeur"></i>
+                    <i class="fa-solid fa-heart coeur-plein"></i>
                 </div>
-
-
             </article>
-
-
 
             <article class="card">
                 <a href="html_restaurants/enchante.html">
@@ -163,11 +160,9 @@
                     </div>
                 </a>
                 <div class="card-heart">
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-regular fa-heart coeur"></i>
+                    <i class="fa-solid fa-heart coeur-plein"></i>
                 </div>
-
-
             </article>
 
             </div>
