--- a/index.html
+++ b/index.html
@@ -70,101 +70,104 @@
 
         <nav>
             <h1>Fonctionnement</h1>
-            <div class="choix">
-                <p class="nbr">1</p>
-                <i class="fa-solid fa-mobile-screen-button "></i>
-                <p>Choisissez un restaurant</p>
-            </div>
-            <div class="choix">
-                <p class="nbr">2</p>
-                <i class="fa-solid fa-list-ul"></i>
-                <p>Composez votre menu</p>
-            </div>
-            <div class="choix">
-                <p class="nbr">3</p>
-                <i class="fa-solid fa-store store"></i>
-                <p>Dégustez au restaurant</p>
+            <div class="placement-nav">
+                <div class="choix">
+                    <p class="nbr">1</p>
+                    <i class="fa-solid fa-mobile-screen-button "></i>
+                    <p>Choisissez un restaurant</p>
+                </div>
+                <div class="choix">
+                    <p class="nbr">2</p>
+                    <i class="fa-solid fa-list-ul"></i>
+                    <p>Composez votre menu</p>
+                </div>
+                <div class="choix">
+                    <p class="nbr">3</p>
+                    <i class="fa-solid fa-store store"></i>
+                    <p>Dégustez au restaurant</p>
+                </div>
             </div>
         </nav>
 
         <section class="resto">
             <h1>Restaurants</h1>
-
-            <article class="card">
-                <a href="html_restaurants/palette.html">
-                    <img src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette">
-                    <div class="nouveau">
-                        <p>Nouveau</p>
-                    </div>
-                    <div class="card-content">
-                        <div class="card-txt">
-                            <h2 class="card-title">La palette du goût</h2>
-                            <p class="card-subtitle">Ménilmontant</p>
+            <div class="placement-resto">
+                <article class="card">
+                    <a href="html_restaurants/palette.html">
+                        <img src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="Photo d'une assiette">
+                        <div class="nouveau">
+                            <p>Nouveau</p>
                         </div>
-                    </div>
-                </a>
-                <div class="card-heart">
-                    <i class="fa-regular fa-heart coeur"></i>
-                    <i class="fa-solid fa-heart coeur-plein"></i>
-                </div>
-            </article>
-
-
-
-            <article class="card">
-                <a href="html_restaurants/enchante.html">
-                    <img src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette">
-                    <div class="nouveau">
-                        <p>Nouveau</p>
-                    </div>
-                    <div class="card-content">
-                        <div class="card-txt">
-                            <h2 class="card-title">La note enchantée</h2>
-                            <p class="card-subtitle">Charonne</p>
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h2 class="card-title">La palette du goût</h2>
+                                <p class="card-subtitle">Ménilmontant</p>
+                            </div>
                         </div>
+                    </a>
+                    <div class="card-heart">
+                        <i class="fa-regular fa-heart coeur"></i>
+                        <i class="fa-solid fa-heart coeur-plein"></i>
                     </div>
-                </a>
-                <div class="card-heart">
-                    <i class="fa-regular fa-heart coeur"></i>
-                    <i class="fa-solid fa-heart coeur-plein"></i>
-                </div>
-            </article>
+                </article>
 
 
 
-            <article class="card">
-                <a href="html_restaurants/enchante.html">
-                    <img src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette">
-                    <div class="card-content">
-                        <div class="card-txt">
-                            <h2 class="card-title">A la française</h2>
-                            <p class="card-subtitle">Cité rouge</p>
+                <article class="card">
+                    <a href="html_restaurants/enchante.html">
+                        <img src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette">
+                        <div class="nouveau">
+                            <p>Nouveau</p>
                         </div>
-                    </div>
-                </a>
-                <div class="card-heart">
-                    <i class="fa-regular fa-heart coeur"></i>
-                    <i class="fa-solid fa-heart coeur-plein"></i>
-                </div>
-            </article>
-
-            <article class="card">
-                <a href="html_restaurants/enchante.html">
-                    <img src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                        alt="Photo d'une assiette">
-                    <div class="card-content">
-                        <div class="card-txt">
-                            <h2 class="card-title">Le délice des sens</h2>
-                            <p class="card-subtitle">Folie-Méricourt</p>
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h2 class="card-title">La note enchantée</h2>
+                                <p class="card-subtitle">Charonne</p>
+                            </div>
                         </div>
+                    </a>
+                    <div class="card-heart">
+                        <i class="fa-regular fa-heart coeur"></i>
+                        <i class="fa-solid fa-heart coeur-plein"></i>
                     </div>
-                </a>
-                <div class="card-heart">
-                    <i class="fa-regular fa-heart coeur"></i>
-                    <i class="fa-solid fa-heart coeur-plein"></i>
-                </div>
-            </article>
+                </article>
 
+
+
+                <article class="card">
+                    <a href="html_restaurants/enchante.html">
+                        <img src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h2 class="card-title">A la française</h2>
+                                <p class="card-subtitle">Cité rouge</p>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="card-heart">
+                        <i class="fa-regular fa-heart coeur"></i>
+                        <i class="fa-solid fa-heart coeur-plein"></i>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <a href="html_restaurants/enchante.html">
+                        <img src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="Photo d'une assiette">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h2 class="card-title">Le délice des sens</h2>
+                                <p class="card-subtitle">Folie-Méricourt</p>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="card-heart">
+                        <i class="fa-regular fa-heart coeur"></i>
+                        <i class="fa-solid fa-heart coeur-plein"></i>
+                    </div>
+                </article>
+            </div>
             </div>
         </section>
 
