html et scss palette

--- a/html_restaurants/menu_vierge.html
+++ b/html_restaurants/menu_vierge.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La palette du goût</title>
+    <title>Nom du resto</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
@@ -40,48 +40,44 @@
                 alt="Photo d'une assiette">
             <div class="carte">
                 <div class="nom">
-                    <h1>La palette du goût</h1>
+                    <h1>nom du resto</h1>
                     <div class="card-heart">
                         <i class="fa-regular fa-heart coeur"></i>
                         <i class="fa-solid fa-heart coeur-plein"></i>
                     </div>
-                </div>
 
+                </div>
                 <div class="menu">
                     <div class="sousmenu">
-
                         <h2>Entrées</h2>
 
                         <div class="plats">
-                            <h3>Fricassée d'escargots</h3>
-                            <div class="prix">
-                                <h4>Au piment d'Espelette</h4>
-                                <h5>25€</h5>
-                            </div>
-                            <div class="vert">
-                                <i class="fa-sharp fa-solid fa-circle-check"></i>
-                            </div>
-                        </div>
-
-                        <div class="plats">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <div class="prix">
-                                <h4>Et ses copeaux de truffe noire</h4>
-                                <h5>35€</h5>
-                            </div>
-                            <div class="vert">
-                                <i class="fa-sharp fa-solid fa-circle-check"></i>
+                            <h3></h3>
+                            <div>
+                                <h4>
+                                </h4>
+                                <h5>
+                                </h5>
                             </div>
                         </div>
 
                         <div class="plats">
-                            <h3>Œuf au plat</h3>
-                            <div class="prix">
-                                <h4>Assaisonné à la truffe sur lit de caviar</h4>
-                                <h5>20€</h5>
+                            <h3></h3>
+                            <div>
+                                <h4>
+                                </h4>
+                                <h5>
+                                </h5>
                             </div>
-                            <div class="vert">
-                                <i class="fa-sharp fa-solid fa-circle-check"></i>
+                        </div>
+
+                        <div class="plats">
+                            <h3></h3>
+                            <div>
+                                <h4>
+                                </h4>
+                                <h5>
+                                </h5>
                             </div>
                         </div>
 
@@ -91,44 +87,32 @@
                         <h2>Plats</h2>
 
                         <div class="plats">
-                            <h3>Filet de bœuf aux herbes
-                            </h3>
-                            <div class="prix">
-                                <h4>Accompagné de sa ribambelle de légumes
+                            <h3></h3>
+                            <div>
+                                <h4>
                                 </h4>
-                                <h5>40€
+                                <h5>
                                 </h5>
-                            </div>
-                            <div class="vert">
-                                <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
                         <div class="plats">
-                            <h3>Parmentier de queue de bœuf
-                            </h3>
-                            <div class="prix">
-                                <h4>À la truffe noire sur sa purée de panais
+                            <h3></h3>
+                            <div>
+                                <h4>
                                 </h4>
-                                <h5>35€
+                                <h5>
                                 </h5>
-                            </div>
-                            <div class="vert">
-                                <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
                         <div class="plats">
-                            <h3>Filet de turbot
-                            </h3>
-                            <div class="prix">
-                                <h4>Aux agrumes
+                            <h3></h3>
+                            <div>
+                                <h4>
                                 </h4>
-                                <h5>44€
+                                <h5>
                                 </h5>
-                            </div>
-                            <div class="vert">
-                                <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
@@ -138,44 +122,32 @@
                         <h2>Desserts</h2>
 
                         <div class="plats">
-                            <h3>Paris-Brest
-                            </h3>
-                            <div class="prix">
-                                <h4>Revisité
+                            <h3></h3>
+                            <div>
+                                <h4>
                                 </h4>
-                                <h5>18€
+                                <h5>
                                 </h5>
-                            </div>
-                            <div class="vert">
-                                <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
                         <div class="plats">
-                            <h3>Macaron au chocolat d'exception
-                            </h3>
-                            <div class="prix">
-                                <h4>Et glace à la vanille de Madagascar
+                            <h3></h3>
+                            <div>
+                                <h4>
                                 </h4>
-                                <h5>22€
+                                <h5>
                                 </h5>
-                            </div>
-                            <div class="vert">
-                                <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
                         <div class="plats">
-                            <h3>Mousse au chocolat
-                            </h3>
-                            <div class="prix">
-                                <h4>Au piment d'Espelette et à la truffe noire
+                            <h3></h3>
+                            <div>
+                                <h4>
                                 </h4>
-                                <h5>23€
+                                <h5>
                                 </h5>
-                            </div>
-                            <div class="vert">
-                                <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
@@ -188,7 +160,7 @@
         </section>
 
         <footer>
-            <img src="../assets/logo/ohmyfoodwhite.svg" alt="Logo">
+            <img src="../assets/logo/ohmyfood@2x.svg" alt="Logo">
             <nav>
                 <ul>
                     <li><i class="fa-solid fa-utensils"></i><a href="#">Proposer
