--- a/html_restaurants/palette.html
+++ b/html_restaurants/palette.html
@@ -191,15 +191,15 @@
             <img src="../assets/logo/ohmyfoodwhite.svg" alt="Logo">
             <nav>
                 <ul>
-                    <li><i class="fa-solid fa-utensils"></i><a href="#">Proposer
+                    <li class="modlong"><i class="fa-solid fa-utensils couvert"></i><a href="#">Proposer
                             un
                             restaurant</a>
                     </li>
-                    <li><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir
+                    <li class="modlong"><i class="fa-solid fa-handshake-angle partenaire"></i><a href="#">Devenir
                             partenaire</a>
                     </li>
-                    <li><a href="#">Mentions légales</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="modcourt"><a href="#">Mentions légales</a></li>
+                    <li class="modcourt"><a href="mailto:contact@moi.com" class="email">Contact</a></li>
                 </ul>
 
             </nav>
