--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 <body>
     <main>
-        <!--<div class="loader">
-            <i class="fa-solid fa-spinner "></i>
-            <i class="fa-solid fa-kitchen-set"></i>
-        </div>-->
+        <div class="loader">
+            <!--<i class="fa-solid fa-spinner "></i>-->
+            <i class="fa-solid fa-kitchen-set kitchen"></i>
+        </div>
         <header>
             <div class="titre">
                 <a href="index.html"><i class="fa-solid fa-arrow-left arrow"></i></a>
@@ -168,7 +168,6 @@
                     </div>
                 </article>
             </div>
-            </div>
         </section>
 
         <footer>
@@ -183,7 +182,7 @@
                             partenaire</a>
                     </li>
                     <li class="modcourt"><a href="#">Mentions légales</a></li>
-                    <li class="modcourt"><a href="#">Contact</a></li>
+                    <li class="modcourt"><a href="mailto:contact@moi.com" class="email">Contact</a></li>
                 </ul>
             </div>
         </footer>
