--- a/html_restaurants/palette.html
+++ b/html_restaurants/palette.html
@@ -52,18 +52,19 @@
 
                         <h2>Entrées</h2>
 
-                        <div class="plats">
+                        <div class="plats entrees">
                             <h3>Fricassée d'escargots</h3>
                             <div class="prix">
                                 <h4>Au piment d'Espelette</h4>
-                                <h5>25€</h5>
+
                             </div>
                             <div class="vert">
+                                <h5>25€</h5>
                                 <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
-                        <div class="plats">
+                        <div class="plats entrees">
                             <h3>Foie gras de canard mi-cuit</h3>
                             <div class="prix">
                                 <h4>Et ses copeaux de truffe noire</h4>
@@ -74,7 +75,7 @@
                             </div>
                         </div>
 
-                        <div class="plats">
+                        <div class="plats entrees">
                             <h3>Œuf au plat</h3>
                             <div class="prix">
                                 <h4>Assaisonné à la truffe sur lit de caviar</h4>
@@ -90,7 +91,7 @@
                     <div class="sousmenu">
                         <h2>Plats</h2>
 
-                        <div class="plats">
+                        <div class="plats tot">
                             <h3>Filet de bœuf aux herbes
                             </h3>
                             <div class="prix">
@@ -104,7 +105,7 @@
                             </div>
                         </div>
 
-                        <div class="plats">
+                        <div class="plats tot">
                             <h3>Parmentier de queue de bœuf
                             </h3>
                             <div class="prix">
@@ -118,7 +119,7 @@
                             </div>
                         </div>
 
-                        <div class="plats">
+                        <div class="plats tot">
                             <h3>Filet de turbot
                             </h3>
                             <div class="prix">
@@ -137,7 +138,7 @@
                     <div class="sousmenu">
                         <h2>Desserts</h2>
 
-                        <div class="plats">
+                        <div class="plats dessert">
                             <h3>Paris-Brest
                             </h3>
                             <div class="prix">
@@ -151,7 +152,7 @@
                             </div>
                         </div>
 
-                        <div class="plats">
+                        <div class="plats dessert">
                             <h3>Macaron au chocolat d'exception
                             </h3>
                             <div class="prix">
@@ -165,7 +166,7 @@
                             </div>
                         </div>
 
-                        <div class="plats">
+                        <div class="plats dessert">
                             <h3>Mousse au chocolat
                             </h3>
                             <div class="prix">
