--- a/html_restaurants/palette.html
+++ b/html_restaurants/palette.html
@@ -24,10 +24,7 @@
 
 <body>
     <main>
-        <!--<div class="loader">
-                <i class="fa-solid fa-spinner "></i>
-                <i class="fa-solid fa-kitchen-set"></i>
-            </div>-->
+
         <header>
             <div class="titre">
                 <a href="../index.html"><i class="fa-solid fa-arrow-left arrow"></i></a>
@@ -53,133 +50,120 @@
                         <h2>Entrées</h2>
 
                         <div class="plats entrees">
-                            <h3>Fricassée d'escargots</h3>
                             <div class="prix">
-                                <h4>Au piment d'Espelette</h4>
-                                <div class="vert">
-                                    <h5>25€</h5>
-                                    <i class="fa-sharp fa-solid fa-circle-check"></i>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="plats entrees">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <div class="prix">
-                                <h4>Et ses copeaux de truffe noire</h4>
-                                <h5>35€</h5>
+                                <h3 class="ellipsis">Fricassée d'escargots</h3>
+                                <p class="description ellipsis">Au piment d'Espelette</p>
                             </div>
                             <div class="vert">
+                                <p class="euro">25€</p>
                                 <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
                         <div class="plats entrees">
-                            <h3>Œuf au plat</h3>
                             <div class="prix">
-                                <h4>Assaisonné à la truffe sur lit de caviar</h4>
-                                <h5>20€</h5>
+                                <h3 class="ellipsis">Foie gras de canard mi-cuit</h3>
+                                <p class="description ellipsis">Et ses copeaux de truffe noire</p>
                             </div>
                             <div class="vert">
+                                <p class="euro">35€</p>
                                 <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
+                        <div class="plats entrees">
+                            <div class="prix">
+                                <h3 class="ellipsis">Œuf au plat</h3>
+                                <p class="description ellipsis">Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <div class="vert">
+                                <p class="euro">20€</p>
+                                <i class="fa-sharp fa-solid fa-circle-check"></i>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="sousmenu">
                         <h2>Plats</h2>
 
                         <div class="plats tot">
-                            <h3>Filet de bœuf aux herbes
-                            </h3>
                             <div class="prix">
-                                <h4>Accompagné de sa ribambelle de légumes
-                                </h4>
-                                <h5>40€
-                                </h5>
+                                <h3 class="ellipsis">Filet de bœuf aux herbes</h3>
+                                <p class="description ellipsis">Accompagné de sa ribambelle de légumes</p>
                             </div>
                             <div class="vert">
+                                <p class="euro">40€</p>
                                 <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
                         <div class="plats tot">
-                            <h3>Parmentier de queue de bœuf
-                            </h3>
+
                             <div class="prix">
-                                <h4>À la truffe noire sur sa purée de panais
-                                </h4>
-                                <h5>35€
-                                </h5>
+                                <h3 class="ellipsis">Parmentier de queue de bœuf</h3>
+                                <p class="description ellipsis">À la truffe noire sur sa purée de panais</p>
+
                             </div>
+
                             <div class="vert">
+                                <p class="euro">35€</p>
                                 <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
                         <div class="plats tot">
-                            <h3>Filet de turbot
-                            </h3>
+
                             <div class="prix">
-                                <h4>Aux agrumes
-                                </h4>
-                                <h5>44€
-                                </h5>
+                                <h3 class="ellipsis">Filet de turbot</h3>
+                                <p class="description ellipsis">Aux agrumes</p>
+
                             </div>
                             <div class="vert">
+                                <p class="euro">44€</p>
                                 <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
-
                     </div>
-
                     <div class="sousmenu">
                         <h2>Desserts</h2>
-
                         <div class="plats dessert">
-                            <h3>Paris-Brest
-                            </h3>
+
                             <div class="prix">
-                                <h4>Revisité
-                                </h4>
-                                <h5>18€
-                                </h5>
+                                <h3 class="ellipsis">Paris-Brest</h3>
+                                <p class="description ellipsis">Revisité</p>
+
                             </div>
                             <div class="vert">
+                                <p class="euro">18€</p>
                                 <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
                         <div class="plats dessert">
-                            <h3>Macaron au chocolat d'exception
-                            </h3>
+
                             <div class="prix">
-                                <h4>Et glace à la vanille de Madagascar
-                                </h4>
-                                <h5>22€
-                                </h5>
+                                <h3 class="ellipsis">Macaron au chocolat d'exception</h3>
+                                <p class="description ellipsis">Et glace à la vanille de Madagascar</p>
+
                             </div>
                             <div class="vert">
+                                <p class="euro">22€</p>
                                 <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
 
                         <div class="plats dessert">
-                            <h3>Mousse au chocolat
-                            </h3>
+
                             <div class="prix">
-                                <h4>Au piment d'Espelette et à la truffe noire
-                                </h4>
-                                <h5>23€
-                                </h5>
+                                <h3 class="ellipsis">Mousse au chocolat</h3>
+                                <p class="description ellipsis">Au piment d'Espelette et à la truffe noire</p>
+
                             </div>
                             <div class="vert">
+                                <p class="euro">23€</p>
                                 <i class="fa-sharp fa-solid fa-circle-check"></i>
                             </div>
                         </div>
-
                     </div>
                 </div>
                 <div class="button_resto">
